--- a/app.conf
+++ b/app.conf
@@ -4,7 +4,7 @@
 
 http.port=9000
 
-site.url=http://localhost:9000 # or http://x.com:8080, http://www.xx.com:9000
+site.url=http://0.0.0.0:9000 # or http://x.com:8080, http://www.xx.com:9000
 
 # admin username
 adminUsername=admin
