--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -40,10 +40,13 @@ autorestart=true
 
 
 [program:leanote]
-command=bash /usr/local/leanote/bin/run.sh
+command=/usr/local/leanote/bin/leanote-linux-amd64 -importPath github.com/leanote/leanote
 autostart=true
 autorestart=true
 priority=10
 
-
-
+[program:nginx]
+command=nginx
+autostart=true
+autorestart=true
+priority=10
