--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -41,6 +41,7 @@ autorestart=true
 
 [program:leanote]
 command=/usr/local/leanote/bin/leanote-linux-amd64 -importPath github.com/leanote/leanote
+environment=GOPATH="/usr/local/leanote/bin"
 autostart=true
 autorestart=true
 priority=10
