--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,7 @@ http {
 
 server {
   listen 80;
-  #server_name ;
+  server_name default;
   client_header_buffer_size 64k;
   large_client_header_buffers 4 64k;
   client_max_body_size 50m;
